test/expected/cli/rescue_non_tty.out
== non-tty bad flag exits 2:
shit: 1:9: error: Unknown flag '--nonexistent-flag'.
     1 |  ../shit --nonexistent-flag -c echo unreached
       |          ^~~~~~~~~~~~~~~~~~ here.
exit=2
== non-tty run does not enter rescue:
0
